# DKL-memory

./: .gitmodules  @CMakeLists.txt  @README.md  CMakeLists.txt  README.md  package.json
examples/: CMakeLists.txt
examples/dmem_tobyte/: @CMakeLists.txt  main.c
examples/now/: CMakeLists.txt  main.c
headers/: conv.h  dmem_allocate.h  main.h
include/: @dkl-memory.h  @dmem.h  dkl-memory.h
include/dkl-memory/: conv.h  device.h
src/: conv.c  convert.c  dev.c  dmem_allocate.c  dmem_shared.c  dmem_shared.h  now.c
tests/: CMakeLists.txt  convert.c  dmem_tobyte.c  now.c
